[tool.poetry]
name = "toucans"
version = "0.0.2"
description = ""
authors = ["Kasper Junge"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"
openai = "^0.28.1"
litellm = "^0.1.807"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
