[tool.poetry]
name = "toucans"
version = "0.0.5"
description = ""
authors = ["Kasper Junge"]
packages = [{ include = "toucans", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"
openai = "^0.28.1"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
litellm = "^0.8.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"