[tool.poetry]
name = "toucans"
version = "0.0.13"
description = ""
authors = ["Kasper Junge"]
packages = [{ include = "toucans", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
requests = "^2.31.0"
litellm = "^1.12.0"
openai = "^1.3.7"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"